--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,13 @@
 }
 
 a{
-    text-decoration:none;
-}
+    text-decoration:none;}
 
 h1{color: darkslateblue; 
     font-weight: 700; 
     text-align: left; 
     font-style: italic; 
-
+    width: 80%;
 }
 h2 {color:red; display: flex;
     font-weight: 800; 
@@ -22,7 +21,8 @@ h2 {color:red; display: flex;
     padding: 25px; 
     background-color:rgba(71, 61, 139, 0.151); 
     text-justify:auto ;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
+    
+width: 100vw;}
 
 h3{color: darkblue; 
     width: 100%;
@@ -30,41 +30,101 @@ h3{color: darkblue;
     text-align: center; 
     padding: 15px; 
     background-color: rgba(95, 158, 160, 0.219);
-    text-justify:auto ; }
-
-
+    text-justify:auto ; width: 100%; }
 
 h4{ color: blueviolet; 
-    font-size: 1rem; 
-}
+    font-size: 1rem; }
 
 header{
-    display: grid;
-    grid-template-rows: 5fr
+    display: grid; 
+    grid-template-rows: 5fr}
+
+
+p {color: rgb(72, 12, 238); 
+        font-weight: 500;
+    font-size: 1rem; 
+    width: 100vw; 
+background-color: rgba(0, 0, 255, 0.075);} 
+
+nav li {    
+    color:darkblue;
+    text-align: center;
+    font-size: 25px;
+display: flex;}
+nav a{    
+    color:darkblue;}
+nav {color:darkmagenta ;
+    display: flex;
+    flex-direction: row-reverse;}
+
+article{
+    color: darkblue; 
+    font-weight: 500; }
+
+button {
+    border-radius: 25%;
+    padding: 10px;
+    color: whitesmoke;
+    font-size: 1rem;}
+
+ul { 
+    list-style: none;
+    display: flex;
+    justify-content: space-between;  }
+footer{
+    background-color:rgba(19, 19, 250, 0.199);}
+header{
+    display: grid;}
+
+@media (min-width:480px){
+    .h1{
+        width: 90%;
+    }
+    .h2{
+        padding: 25px;
+        width: 90vw;}
+    .encabezado{
+        width: 100vw;}
+    }
+@media(min-width:750px) {
+    .h1{
+        width: 90%;
+    }
+    .h2{
+        width: 90%;
+    }
+} 
+
+/* --- Header--- */
+
+.header_title{
+    background-color: rgba(137, 43, 226, 0.233);
 }
+
+
+
+.body{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 .encabezado{
     width: 30px;
     padding: 40px;
     display: flex ;
     justify-content: space-between;
-    align-items: baseline;
-    /* flex-direction:column; */
-}
+    align-items: baseline;}
 
 .encabezado_img{
-    width: 50vw
-}
-.encabezado_img_2{
-    width: 43vw;
-    
-    ;
-}
+    width: 100vw;
+justify-content: center;
+align-items: center;}
+
+
 .caja{
     width: 200px;
     height: 800px;
     border: 1.5px darkslateblue solid;
-    align-items: center;
-}
+    align-items: center;}
 
 .services {
     width: 300px;
@@ -72,18 +132,14 @@ header{
     border: 2px solid black;
     align-items: center;
     flex-direction:column;
-    display:flex;
-    
-}
+    display:flex;}
 .serv-tarjeta{
     width: 100%;
-    /*height: 80%;*/
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    text-align: center;
-}
+    text-align: center;}
 
 .contenedor{
     display: flex;
@@ -91,12 +147,7 @@ header{
     flex-wrap:wrap;
     align-content: space-evenly;
     row-gap:20px;
-    column-gap:20px;
-    /* display: grid                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          ;
-    grid-template-columns: 25% 50% 25%;
-    grid-template-rows: 25% 25% 25% 25%; */
-}
-
+    column-gap:20px;}
 
 .tarjeta_boton{
     align-items: center;
@@ -105,119 +156,31 @@ header{
     border: 1px solid black;
     border-radius: 20px 20px;
     padding: 8px 8px;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-    bottom: unset;
-}
+    justify-content:space-between;
+    align-items:center;
+    text-align:center;
+    bottom:unset}
 .tarjeta_boton:hover{
     border:blue solid 2px;
     background-color: whitesmoke;
     /* color: blue; */
     justify-content: space-between;
     align-items: center;
-    text-align: center;
-}
-
-/* .servicio {
-    border: 2px;
-    border-color: black solid;
-} */
-
-/* color: darkblue; 
-    font-weight: 700; 
-    text-align: center; 
-    padding: 15px; 
-    background-color: rgba(95, 158, 160, 0.219);
-    text-justify:auto ;
-     */
-/* .tarjeta_service{
-    color: darkblue; 
-    font-weight: 700; 
-    margin: 60px;
-    text-align: center; 
-    padding: 15px; 
-    background-color: rgba(95, 158, 160, 0.219);
-    text-justify:auto ;
-} */
-
+    text-align: center;}
 
 .body{
     width:100%;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
 
 .contacto{
     border: darkblue solid;
     font-size: white ;
-    background-color: blue;
-}
-
-/* .ver-mas{
-        background-color: darkblue;
-        font-size: white;
-        text-align: center;
-    } */
-
-
-
+    background-color: blue;}
 
 .logo-derecha{
     background-image: url(../Protegert/Imagen/Logos/fondo-pag/medico-en-escritorio.jpg);
-    background-position: right;
-}
+    background-position: right;}
 
+.color-magenta{
+    color:darkmagenta}
 
-article{
-    color: darkblue; 
-    font-weight: 500; }
-
-    
-
-button {
-    border-radius: 25%;
-    padding: 10px;
-    color: whitesmoke;
-    font-size: 1rem;
-
-}
-
-.color-magenta{   
-    color:darkmagenta
-}
-
-p {color: rgb(72, 12, 238); 
-        font-weight: 500;
-    font-size: 1rem;  } 
-
-
-nav li {    
-    color:darkblue;
-    text-align: center;
-
-}
-nav a{    
-    color:darkblue;}
-nav {color:darkmagenta ;
-    display: flex;
-    flex-direction: row-reverse;
-    
-}
-
-
-ul { 
-    list-style: none;
-    display: flex;
-    justify-content: space-between;
-    
-}
-
-footer{
-    background-color:rgba(19, 19, 250, 0.199);
-}
-
-/* -----grids----- */
-
-header{
-    display: grid;
-}
