--- a/css/style.css
+++ b/css/style.css
@@ -5,24 +5,22 @@
     box-sizing: border-box;
 }
 
-a{
-    text-decoration:none;}
+a{text-decoration:none;}
 
-h1{color: darkslateblue; 
-    font-weight: 700; 
+h1 {color: darkslateblue; 
+    font-weight: 550; 
     text-align: left; 
     font-style: italic; 
-    width: 80%;
-}
+    width: 100vw;}
+
 h2 {color:red; display: flex;
     font-weight: 800; 
     text-align: center; 
     justify-content: center;
     padding: 25px; 
     background-color:rgba(71, 61, 139, 0.151); 
-    text-justify:auto ;
-    
-width: 100vw;}
+    text-justify:auto ; 
+    width: 100vw;}
 
 h3{color: darkblue; 
     width: 100%;
@@ -32,25 +30,26 @@ h3{color: darkblue;
     background-color: rgba(95, 158, 160, 0.219);
     text-justify:auto ; width: 100%; }
 
-h4{ color: blueviolet; 
+h4{color: blueviolet; 
     font-size: 1rem; }
 
-header{
+/* header{
     display: grid; 
-    grid-template-rows: 5fr}
+    grid-template-rows: 5fr} */
 
 
-p {color: rgb(72, 12, 238); 
+p{color: rgb(72, 12, 238); 
         font-weight: 500;
-    font-size: 1rem; 
-    width: 100vw; 
-background-color: rgba(0, 0, 255, 0.075);} 
+        font-size: 1rem; 
+        width: 100vw; 
+        background-color: rgba(0, 0, 255, 0.075);} 
 
-nav li {    
+nav li {   
+    align-items: center; 
     color:darkblue;
     text-align: center;
     font-size: 25px;
-display: flex;}
+    display: flex;}
 nav a{    
     color:darkblue;}
 nav {color:darkmagenta ;
@@ -72,14 +71,14 @@ ul {
     display: flex;
     justify-content: space-between;  }
 footer{
-    background-color:rgba(19, 19, 250, 0.199);}
+    background-color:rgba(19, 19, 250, 0.199);
+width: 100vw;}
 header{
     display: grid;}
 
-@media (min-width:480px){
+/* @media (min-width:480px){
     .h1{
-        width: 90%;
-    }
+        width: 90%;}
     .h2{
         padding: 25px;
         width: 90vw;}
@@ -93,12 +92,13 @@ header{
     .h2{
         width: 90%;
     }
-} 
+}  */
 
 /* --- Header--- */
 
 .header_title{
     background-color: rgba(137, 43, 226, 0.233);
+    width: 60vw;
 }
 
 
@@ -115,9 +115,9 @@ header{
     align-items: baseline;}
 
 .encabezado_img{
-    width: 100vw;
-justify-content: center;
-align-items: center;}
+    width: 90vw;
+    justify-content: center;
+    align-items: center;}
 
 
 .caja{
